--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/alsatian-test/alsatian-website#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "monaco-editor": "^0.5.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "systemjs": "^0.19.31",
     "typescript": "^1.8.10",
     "typings": "^1.3.1"
   }
