--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "files": [
         "./public/ts/app-component.tsx",
         "./index.ts",
-        "./typings/index.d.ts"
+        "./typings/index.d.ts",
+        "./typings/modules/react/index.d.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
