--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alsatian-test/alsatian-website#readme",
   "dependencies": {
     "alsatian": "^1.0.0-alpha.5",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "monaco-editor": "^0.5.1",
     "react": "^15.2.0",
