--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "monaco-editor": "^0.5.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "redux": "^3.5.2",
     "systemjs": "^0.19.31",
     "typescript": "^1.8.10",
     "typings": "^1.3.1"
