--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "redux": "^3.5.2",
+    "reflect-metadata": "^0.1.3",
     "systemjs": "^0.19.31",
     "typescript": "^1.8.10",
     "typings": "^1.3.1"
