--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
         "./index.ts",
         "./server/app.ts",
         "./server/test-service.ts",
-        "./typings/index.d.ts"
+        "./typings/index.d.ts",
+        "./typings/modules/react/index.d.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
