--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
         "./public/ts/app-component.tsx",
         "./public/ts/components/pages/get-started-page-component.tsx",
         "./public/ts/components/pages/home-page-component.tsx",
+        "./public/ts/components/pages/not-found-page-component.tsx",
         "./public/ts/menu-component.tsx",
         "./public/ts/navigation-bar-component.tsx",
         "./public/ts/tdd-tutor-poc.tsx",
