--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
         "./public/ts/components/pages/get-started-page-component.tsx",
         "./public/ts/components/pages/home-page-component.tsx",
         "./public/ts/components/pages/not-found-page-component.tsx",
+        "./public/ts/components/pages/tutorials-page-component.tsx",
         "./public/ts/menu-component.tsx",
         "./public/ts/navigation-bar-component.tsx",
         "./public/ts/tdd-tutor-poc.tsx",
