--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     ],
     "files": [
         "./public/ts/app-component.tsx",
+        "./public/ts/app-router.tsx",
         "./public/ts/components/pages/get-started-page-component.tsx",
         "./public/ts/components/pages/home-page-component.tsx",
         "./public/ts/components/pages/not-found-page-component.tsx",
