--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,8 @@
     "files": [
         "./public/ts/app-component.tsx",
         "./public/ts/app-router.tsx",
+        "./public/ts/components/pages/blog-page-component.tsx",
+        "./public/ts/components/pages/documentation-page-component.tsx",
         "./public/ts/components/pages/get-started-page-component.tsx",
         "./public/ts/components/pages/home-page-component.tsx",
         "./public/ts/components/pages/not-found-page-component.tsx",
