--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "typings": "^1.3.1"
   },
   "devDependencies": {
-    "breakpoint": "^0.1.6",
+    "breakpoint-sass": "^2.7.0",
     "node-sass": "^3.10.1",
     "susy": "^2.2.12"
   }
