--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "alsatian": "^1.0.0-alpha.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "highlight.js": "^9.8.0",
     "monaco-editor": "^0.5.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.0",
+    "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
     "susy": "^2.2.12"
   }
