--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-sass": "node-sass --include-path scss public/sass/styles.scss public/css/styles.css",
+    "dev": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js"
   },
