add new build task

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Website for alsatian test framework (https://github.com/alsatian-test/alsatian)",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build-typescript && npm run build-sass",
     "build-sass": "node-sass --include-path scss public/sass/styles.scss public/css/styles.css",
+    "build-typescript": "tsc",
     "dev": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js"
