--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "highlight.js": "^9.8.0",
     "monaco-editor": "^0.5.1",
+    "prismjs": "^1.5.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-router": "^2.8.1",
