--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "redux": "^3.5.2",
     "reflect-metadata": "^0.1.3",
     "systemjs": "^0.19.31",
-    "typescript": "^2.0.8",
-    "typings": "^1.3.1"
+    "typescript": "^2.0.8"
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.0",
