--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "typescript": "^2.0.8"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/express": "^4.0.33",
+    "@types/prismjs": "^1.4.18",
+    "@types/react": "^0.14.46",
+    "@types/react-dom": "^0.14.18",
+    "@types/react-router": "^2.0.38",
     "breakpoint-sass": "^2.7.0",
     "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
