--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.33",
+    "@types/history": "^2.0.39",
     "@types/prismjs": "^1.4.18",
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
