--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run build-typescript && npm run build-sass",
     "build-sass": "node-sass --include-path scss public/sass/styles.scss public/css/styles.css",
     "build-typescript": "tsc",
-    "dev": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
+    "dev": "npm-run-all --parallel start expose-to-networked-devices",
+    "expose-to-networked-devices": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js"
   },
@@ -47,6 +48,7 @@
     "breakpoint-sass": "^2.7.0",
     "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
+    "npm-run-all": "^3.1.1",
     "susy": "^2.2.12"
   }
 }
