--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/alsatian-test/alsatian-website#readme",
   "dependencies": {
-    "alsatian": "^1.0.0-alpha.6",
+    "alsatian": "^1.0.0-beta.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "highlight.js": "^9.8.0",
