--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.1",
-    "susy": "^2.2.12"
+    "susy": "^2.2.12",
+    "tslint": "^4.0.2"
   }
 }
