--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build-typescript": "tsc",
     "dev": "npm-run-all --parallel start expose-to-networked-devices",
     "expose-to-networked-devices": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
-    "review": "npm run review-typescript",
+    "review": "npm run review-typescript & npm run review-sass",
     "review-typescript": "tslint \"**/*.ts\" \"**/*.tsx\" --exclude \"**/*.d.ts\" --exclude \"node_modules/**/*.*\"",
+    "review-sass": "sass-lint \"**/*.scss\" --ignore \"node_modules/**/*.*\"",
     "start": "node ./index.js",
     "pretest": "npm run build",
     "test": "npm run review && npm run unit-tests",
