--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "npm-run-all --parallel start expose-to-networked-devices",
     "expose-to-networked-devices": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
     "start": "node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch-sass": "onchange public/**/*.scss -- npm run build-sass"
   },
   "repository": {
     "type": "git",
@@ -49,6 +50,7 @@
     "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.1",
+    "onchange": "^3.0.2",
     "susy": "^2.2.12"
   }
 }
