--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expose-to-networked-devices": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "npm-run-all --parallel watch-sass watch-typescript",
     "watch-sass": "onchange public/**/*.scss -- npm run build-sass",
     "watch-typescript": "onchange public/**/*.ts public/**/*.tsx -e **/*.d.ts -- npm run build-typescript"
   },
