--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "review": "npm run review-typescript & npm run review-sass",
     "review-typescript": "tslint \"**/*.ts\" \"**/*.tsx\" --exclude \"**/*.d.ts\" --exclude \"node_modules/**/*.*\"",
     "review-sass": "sass-lint \"**/*.scss\" --ignore \"node_modules/**/*.*\"",
-    "start": "node ./index.js",    
+    "start": "node ./index.js",
     "pretest": "npm run build",
     "test": "npm run review && npm run unit-tests",
     "unit-tests": "alsatian \"./public/**/*.spec.js\" \"./server/**/*.spec.js\"",
+    "end-to-end-tests": "alsatian \"./test/end-to-end/**/*.spec.js\" -t 10000",
     "watch": "npm-run-all --parallel watch-sass watch-typescript",
     "watch-sass": "onchange **/*.scss -e node_modules/**/*.* -- npm run build-sass",
     "watch-typescript": "onchange **/*.ts **/*.tsx -e **/*.d.ts  -e node_modules/**/*.* -- npm run build-typescript"
@@ -31,7 +32,7 @@
   },
   "homepage": "https://github.com/alsatian-test/alsatian-website#readme",
   "dependencies": {
-    "alsatian": "^1.0.0-beta.2",
+    "alsatian": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "highlight.js": "^9.8.0",
@@ -53,12 +54,14 @@
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
     "@types/react-router": "^2.0.38",
+    "@types/selenium-webdriver": "^2.53.38",
     "breakpoint-sass": "^2.7.0",
     "browser-sync": "^2.17.5",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.1",
     "onchange": "^3.0.2",
     "sass-lint": "^1.10.2",
+    "selenium-webdriver": "^3.0.1",
     "susy": "^2.2.12",
     "tslint": "^4.0.2"
   }
