--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 #NPM
 node_modules
 npm-debug.log*
+debug.log
 
 #TypeScript
 *.js
 *.js.map
-typings
 *.d.ts
+
+#Webpack
+!webpack.config.js
 
 #Sass
 *.css
@@ -15,5 +18,5 @@ typings
 coverage
 .nyc_output
 
-#Selenium
-debug.log
+#Distribution code
+public/dist
