--- a/package.json
+++ b/package.json
@@ -1,68 +1,70 @@
 {
-  "name": "alsatian-website",
+  "name": "web-app-seed",
   "version": "1.0.0",
-  "description": "Website for alsatian test framework (https://github.com/alsatian-test/alsatian)",
-  "main": "index.js",
+  "description": "seed for a new web app",
+  "main": "server/startup.js",
   "scripts": {
-    "build": "npm run build-typescript && npm run build-sass",
-    "build-sass": "node-sass --include-path scss public/sass/styles.scss public/css/styles.css",
-    "build-typescript": "tsc",
-    "dev": "npm-run-all --parallel start expose-to-networked-devices watch",
-    "expose-to-networked-devices": "browser-sync start --proxy localhost:2900 --files \"css/*.css\"",
+    "build": "npm-run-all build-scripts build-server build-web-app",
+    "build-web-app": "npm-run-all build-web-app-*",
+    "build-web-app-images": "imagemin public/src/images/**/*.* --out-dir=public/dist/images",
+    "build-web-app-typescript": "webpack --optimize-minimize",
+    "build-web-app-html": "node scripts/build-html",
+    "build-scripts": "tsc -p ./scripts",
+    "build-server": "tsc -p ./server",
+    "dev": "npm run build-scripts && npm run build-server && npm-run-all --parallel start-web-server dev-web-app",
+    "dev-web-app": "npm-run-all --parallel expose-to-networked-devices build-web-app-images dev-web-app-*",
+    "dev-web-app-typescript": "webpack --watch --devtool source-map",
+    "dev-web-app-html": "npm run watch-web-app-html",
+    "watch-web-app-html": "node scripts/build-html --watch",
+    "expose-to-networked-devices": "browser-sync start --proxy localhost:3000 --files \"css/*.css\"",
     "review": "npm run review-typescript & npm run review-sass",
     "review-typescript": "tslint \"**/*.ts\" \"**/*.tsx\" --exclude \"**/*.d.ts\" --exclude \"node_modules/**/*.*\"",
     "review-sass": "sass-lint \"**/*.scss\" --ignore \"node_modules/**/*.*\"",
-    "start": "node ./index.js",
-    "pretest": "npm run build",
+    "pretest": "npm run build-unit-tests",
     "test": "npm run review && npm run unit-tests",
-    "unit-tests": "alsatian \"./public/**/*.spec.js\" \"./server/**/*.spec.js\"",
-    "end-to-end-tests": "alsatian \"./test/end-to-end/**/*.spec.js\" -t 10000",
-    "watch": "npm-run-all --parallel watch-sass watch-typescript",
-    "watch-sass": "onchange **/*.scss -e node_modules/**/*.* -- npm run build-sass",
-    "watch-typescript": "onchange **/*.ts **/*.tsx -e **/*.d.ts  -e node_modules/**/*.* -- npm run build-typescript"
+    "build-unit-tests": "tsc -p ./test/unit-tests",
+    "unit-tests": "alsatian \"./test/unit-tests/**/*.spec.js\"",
+    "prestart": "npm run build",
+    "start-web-server": "node server/startup.js",
+    "start": "npm run start-web-server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alsatian-test/alsatian-website.git"
+    "url": "git+https://github.com/jamesrichford/web-app-seed.git"
   },
-  "author": "",
+  "author": "James Richford <=> (=)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alsatian-test/alsatian-website/issues"
+    "url": "https://github.com/jamesrichford/web-app-seed/issues"
   },
-  "homepage": "https://github.com/alsatian-test/alsatian-website#readme",
-  "dependencies": {
-    "alsatian": "^1.0.0",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "highlight.js": "^9.8.0",
-    "monaco-editor": "^0.7.0",
-    "prismjs": "^1.5.1",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "react-router": "^3.0.0",
-    "redux": "^3.5.2",
-    "reflect-metadata": "^0.1.3",
-    "systemjs": "^0.19.31",
-    "typescript": "^2.0.8"
-  },
+  "homepage": "https://github.com/jamesrichford/web-app-seed#readme",
   "devDependencies": {
-    "@types/body-parser": "0.0.33",
-    "@types/express": "^4.0.33",
-    "@types/history": "^2.0.39",
-    "@types/prismjs": "^1.4.18",
-    "@types/react": "^0.14.46",
-    "@types/react-dom": "^0.14.18",
-    "@types/react-router": "^2.0.38",
-    "@types/selenium-webdriver": "^2.53.38",
-    "breakpoint-sass": "^2.7.0",
-    "browser-sync": "^2.17.5",
-    "node-sass": "^3.10.1",
-    "npm-run-all": "^4.0.0",
-    "onchange": "^3.0.2",
+    "@types/compression": "0.0.33",
+    "@types/express": "^4.0.34",
+    "@types/handlebars": "^4.0.31",
+    "@types/node": "^6.0.52",
+    "@types/serve-static": "^1.7.31",
+    "@types/watch": "0.0.28",
+    "alsatian": "^1.0.0-beta.4",
+    "browser-sync": "^2.18.6",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "handlebars": "^4.0.6",
+    "imagemin-cli": "^3.0.0",
+    "node-sass": "^4.0.0",
+    "npm-run-all": "^4.0.1",
     "sass-lint": "^1.10.2",
-    "selenium-webdriver": "^3.0.1",
-    "susy": "^2.2.12",
-    "tslint": "^4.0.2"
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^2.0.0",
+    "tslint": "^4.1.1",
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.0"
+  },
+  "dependencies": {
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "serve-static": "^1.11.1",
+    "watch": "^1.0.1"
   }
 }
