--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "preserveConstEnums": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "lib": [ "es5", "es2015.promise", "dom" ],
+        "lib": [ "es2015", "dom" ],
         "jsx": "react"
     },
     "buildOnSave": true,
