--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start-web-server": "node server/startup.js",
     "start": "npm run start-web-server",
     "switch-to-deploy": "git checkout -b deploy && git merge master",
+    "remove-gitignore": "rimraf .gitignore",
     "deploy": "npm-run-all switch-to-deploy"
   },
   "repository": {
@@ -75,6 +76,7 @@
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.0",
     "onchange": "^3.0.2",
+    "rimraf": "^2.6.1",
     "sass-lint": "^1.10.2",
     "sass-loader": "^6.0.2",
     "selenium-webdriver": "^3.0.1",
