--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "switch-to-deploy": "git checkout -b gh-pages-test && git merge master",
     "clean-for-deploy": "npm-run-all clean-source clean-configs",
     "clean-source": "rimraf ./public ./node_modules ./scripts ./server ./test",
-    "clean-configs": "rimraf .gitignore  ./.vscode *.yml *.log *.json webpack.config.js",
+    "clean-configs": "rimraf .gitignore  ./.vscode *.yml *.log *.log.* *.json webpack.config.js",
     "move-dist-to-root": "mv ./public/dist ./",
     "push-to-deploy": "git commit -am 'autodeploy' && git push origin gh-pages-test",
     "github-deploy": "npm-run-all switch-to-deploy build clean-for-deploy push-to-deploy"
