--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prestart": "npm run build",
     "start-web-server": "node server/startup.js",
     "start": "npm run start-web-server",
-    "switch-to-deploy": "git checkout -b gh-pages-test && git merge master",
+    "switch-to-deploy": "git checkout gh-pages-test && git merge master",
     "clean-for-deploy": "npm-run-all clean-source clean-configs",
     "clean-source": "rimraf ./public ./node_modules ./scripts ./server ./test",
     "clean-configs": "rimraf .gitignore  ./.vscode *.yml *.log *.log.* *.json webpack.config.js",
